--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^9.71.0",
     "@react-three/fiber": "^8.13.0",
+    "@react-three/postprocessing": "^2.14.9",
     "@types/three": "^0.152.1",
     "fast-simplex-noise": "^4.0.0",
     "react": "^18.2.0",
